[package]
name = "hello-dioxus"
version = "0.1.0"
authors = ["photowey <photowey@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5", features = ["desktop", "router"] }

# Debug
tracing = "0.1"
dioxus-logger = "0.5"
log = "0.4"